# Covoiturage

./: .gitignore  CMakeLists.txt  Covoiturage.pro  Makefile  README.md  database.sqlite  maBase.sqlite  main.cpp  main1.cpp  main_console.cpp  makefile  moc_AccueilFenetre.cpp  moc_ConnexionFenetre.cpp  moc_DetailTrajetFenetre.cpp  moc_DetailTrajetReservationFenetre.cpp  moc_InscriptionFenetre.cpp  moc_MainControlleur.cpp  moc_MesAnnoncesFenetre.cpp  moc_MesReservationsFenetre.cpp  moc_ModifierProfilFenetre.cpp  moc_PublierTrajetFenetre.cpp  moc_RechercherTrajetFenetre.cpp  monProgramme  test  test_recherchecontrolleur.cpp
Controlleur/Controlleur_cpp/: AccueilControlleur.cpp  BaseControlleur.cpp  ConnexionControlleur.cpp  InscriptionControlleur.cpp  MainControlleur.cpp  ModifierProfilControlleur.cpp  RechercheControlleur.cpp  TrajetControlleur.cpp
Controlleur/Controlleur_hpp/: AccueilControlleur.hpp  AvisControlleur.hpp  BaseControlleur.hpp  ConnexionControlleur.hpp  InscriptionControlleur.hpp  MainControlleur.h  ModifierProfilControlleur.hpp  RechercheControlleur.hpp  ReservationControlleur.hpp  TrajetControlleur.hpp
Interface/Interface_cpp/: AccueilConsole.cpp  ConnexionConsole.cpp  InscriptionConsole.cpp  MesAnnoncesConsole.cpp  MesReservationsConsole.cpp  ModifierProfilConsole.cpp  RechercheConsole.cpp  TrajetConsole.cpp
Interface/Interface_graphique/headers/: AccueilFenetre.h  ConnexionFenetre.h  DetailTrajetFenetre.h  DetailTrajetReservationFenetre.h  InscriptionFenetre.h  MesAnnoncesFenetre.h  MesReservationsFenetre.h  ModifierProfilFenetre.h  PublierTrajetFenetre.h  RechercherTrajetFenetre.h
Interface/Interface_graphique/src/: AccueilFenetre.cpp  ConnexionFenetre.cpp  DetailTrajetFenetre.cpp  DetailTrajetReservationFenetre.cpp  InscriptionFenetre.cpp  MesAnnoncesFenetre.cpp  MesReservationsFenetre.cpp  ModifierProfilFenetre.cpp  PublierTrajetFenetre.cpp  RechercherTrajetFenetre.cpp
Interface/Interface_hpp/: AccueilConsole.hpp  AccueilInterface.hpp  AvisInterface.hpp  ConnexionConsole.hpp  ConnexionInterface.hpp  InscriptionInterface.hpp  MesAnnoncesInterface.hpp  MesReservationsInterface.hpp  ModifierProfilInterface.hpp  RechercheInterface.hpp  TrajetConsole.hpp  TrajetInterface.hpp
Interface/Interface_hpp/Console_hpp/: AccueilConsole.hpp  ConnexionConsole.hpp  InscriptionConsole.hpp  MesAnnoncesConsole.hpp  MesReservationsConsole.hpp  ModifierProfilConsole.hpp  RechercheConsole.hpp  TrajetConsole.hpp
Modele/Modele_cpp/: BaseDonnees.cpp  Conducteur.cpp  Passager.cpp  Reservation.cpp  Trajet.cpp  Utilisateur.cpp
Modele/Modele_hpp/: Avis.hpp  BaseDonnees.hpp  Conducteur.hpp  Passager.hpp  Reservation.hpp  Trajet.hpp  Utilisateur.hpp
Tests/: TestAccueilInterface.cpp  TestConnexionInterface.cpp  TestInscriptionInterface.cpp
Tests/Test_controlleur/: Test_VerifierSaisieTajet.cpp  Test_VerifierSaisieTrajet.cpp  Test_ajoutTajet.cpp  Test_calculerEmission.cpp  Test_comparer.cpp  Test_comparerDistanceTrajet.cpp  Test_comparerDuree.cpp  Test_comparerEmission.cpp  Test_comparerHeureDepart.cpp  Test_comparerPointIntermediaire.cpp  Test_comparerPrix.cpp  Test_connexion.cpp  Test_modifierProfil.cpp  Test_obtenirTrajets.cpp  Test_rechercherTrajet.cpp  Test_reservation.cpp  Test_supprimerReservation.cpp  Test_supprimerTrajet.cpp  Test_verifierSaisie.cpp  Test_verifierSaisieInscription.cpp  Test_verifierUtilisateur.cpp
Tests/Test_interface/: TestAccueilInterface.cpp  TestConnexionInterface.cpp  TestInscriptionInterface.cpp  TestMesAnnoncesInterface.cpp  TestMesReservationsInterface.cpp  TestModifierProfil.cpp  TestModifierProfilInterface.cpp  TestRechercheInterface.cpp  TestTrajetInterface.cpp
Tests/Test_modele/: Test_BDD.cpp
